force-app/main/default/objects/Case/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <label>External Order ID</label>
    <length>50</length>
    <type>Text</type>
    <description>Order number from the Cartiva backend (e.g. ORD-10045).</description>
</CustomField>