force-app/main/default/objects/Case/fields/External_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Ticket ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
    <description>Ticket number from the Cartiva backend (e.g. TCK-10023).</description>
</CustomField>