force-app/main/default/objects/Case/fields/Recommended_Team__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Team__c</fullName>
    <label>Recommended Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Product Support</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>General Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>