force-app/main/default/objects/Case/fields/Triage_Override__c.field-meta.xml
<CustomField>
    <fullName>Triage_Override__c</fullName>
    <label>Triage Override</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>