force-app/main/default/objects/Case/fields/Triage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Triage_Reason__c</fullName>
    <label>Triage Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>