force-app/main/default/objects/Case/fields/Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Status__c</fullName>
    <label>Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Triaged</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Triaged</fullName>
            </value>
            <value>
                <fullName>Manually Overridden</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>